# QtAV-MinGW64

./: .gitignore  CMakeLists.txt  README.md
3rd/ffmpeg/: README.txt
examples/: CMakeLists.txt
examples/QMLPlayer/: main.cpp
examples/common/: qoptions.cpp
examples/player/: MainWindow.cpp  Slider.cpp  Slider.h
examples/videographicsitem/: videoplayer.cpp
examples/videogroup/: videogroup.cpp
examples/videowall/: VideoWall.cpp
src/: AVError.cpp  AVThread.cpp  CMakeLists.txt
src/codec/video/: VideoDecoderD3D11.cpp  VideoDecoderDXVA.cpp
src/directx/: D3D11VP.cpp
src/filter/: FilterManager.cpp
src/opengl/: gl_api.cpp  gl_api.h
src/output/audio/: xaudio2_compat.h
src/subtitle/: SubtitleProcessorLibASS.cpp
widgets/: CMakeLists.txt  GLWidgetRenderer2.cpp
widgets/QtAVWidgets/: GLWidgetRenderer2.h
